--- a/ansible/roles/biocache-cli/tasks/main.yml
+++ b/ansible/roles/biocache-cli/tasks/main.yml
@@ -14,7 +14,7 @@
   copy: src=config/subgroups.json dest={{data_dir}}/biocache/config/subgroups.json
 
 - name: copy biocache store jar
-  get_url: url={{biocache_store_url}} dest="/usr/lib/biocache/biocache.zip" force=yes owner={{tomcat_user}} group={{tomcat_user}}
+  get_url: url={{biocache_store_url}} dest="/usr/lib/biocache/biocache.zip" force=no owner={{tomcat_user}} group={{tomcat_user}}
 
 - name: install unzip (Debian only)
   apt: pkg=unzip state=present
